Fix bug with too narrow grid when horizontal filters are enabled - IE11

--- a/src/customizations/grid-layout/_grid-layout.scss
+++ b/src/customizations/grid-layout/_grid-layout.scss
@@ -32,6 +32,11 @@ $bricksHeight: (
 
 .#{$namespace}grid-layout {
     @include gridLayout($bricksPerRow, $bricksHeight, 0);
+
+    // IE11 does not keep 100% width without explicit declaration
+    .ie11 & {
+        width: 100%;
+    }
 }
 
 .#{$namespace}grid-layout_in-column {
